--- a/gb/21/7/23/n13110389.md
+++ b/gb/21/7/23/n13110389.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/reprsb3742/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/reprsb3742/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/reprsb3742/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/reprsb3742/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/reprsb3742/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/reprsb3742/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/reprsb3742/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/reprsb3742/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/reprsb3742/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/reprsb3742/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/reprsb3742/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/reprsb3742/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/reprsb3742/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/reprsb3742/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/reprsb3742/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/reprsb3742/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/reprsb3742/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/reprsb3742/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/reprsb3742/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/reprsb3742/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/reprsb3742/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/reprsb3742/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/reprsb3742/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/reprsb3742/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台警戒降级 教育场域有条件开放</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13110391-508158-600x400.jpg" />
 <h6>因部分家长有特殊需求，台中市安和国中幼儿园在三级警戒期间尚有几位小朋友在教室上课。（台中市政府提供）
 </h6>
 <hr>
-<p>【大纪元2021年07月23日讯】（大纪元记者林紫馨、徐乃义、黄玉燕台湾报导）中央流行疫情指挥中心23日宣布，自7月27日至8月9日调降疫情警戒标准至第二级。<ahref="https://github.com/reprsb3742/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2%E9%83%A8.md#1">教育部</a>规划在符合相关防疫指引下，<ahref="https://github.com/reprsb3742/djy/blob/master/gb/tag/%E5%B9%BC%E5%84%BF%E5%9B%AD.md#1">幼儿园</a>、托婴中心将有条件开放，条件是教职员<ahref="https://github.com/reprsb3742/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97.md#1">疫苗</a>施打率须达80%，也将开放儿童课后照顾中心、补习班、社会教育机构、社区大学（秋季班报名）、高级中等以下学校运动团队训练、室内外运动场馆、高级中等以下学校暑期教学活动等场域及活动，并研拟配套措施。</p>
-<p><ahref="https://github.com/reprsb3742/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2%E9%83%A8.md#1">教育部</a>说明，<ahref="https://github.com/reprsb3742/djy/blob/master/gb/tag/%E5%B9%BC%E5%84%BF%E5%9B%AD.md#1">幼儿园</a>、托婴中心等非固定座位教育场域，开放条件是教师及工作人员<ahref="https://github.com/reprsb3742/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97.md#1">疫苗</a>施打率达八成，未施打疫苗或接种未达14天的人员须有3天内<ahref="https://github.com/reprsb3742/djy/blob/master/gb/tag/%E5%BF%AB%E7%AD%9B.md#1">快筛</a>或核酸检验阴性证明，且每3~7天定期快筛。</p>
+<p>【大纪元2021年07月23日讯】（大纪元记者林紫馨、徐乃义、黄玉燕台湾报导）中央流行疫情指挥中心23日宣布，自7月27日至8月9日调降疫情警戒标准至第二级。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2%E9%83%A8.md#1">教育部</a>规划在符合相关防疫指引下，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B9%BC%E5%84%BF%E5%9B%AD.md#1">幼儿园</a>、托婴中心将有条件开放，条件是教职员<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97.md#1">疫苗</a>施打率须达80%，也将开放儿童课后照顾中心、补习班、社会教育机构、社区大学（秋季班报名）、高级中等以下学校运动团队训练、室内外运动场馆、高级中等以下学校暑期教学活动等场域及活动，并研拟配套措施。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2%E9%83%A8.md#1">教育部</a>说明，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B9%BC%E5%84%BF%E5%9B%AD.md#1">幼儿园</a>、托婴中心等非固定座位教育场域，开放条件是教师及工作人员<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97.md#1">疫苗</a>施打率达八成，未施打疫苗或接种未达14天的人员须有3天内<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BF%AB%E7%AD%9B.md#1">快筛</a>或核酸检验阴性证明，且每3~7天定期快筛。</p>
 <p>教育部并对严格规定幼儿园的清洁消毒，包括幼儿入园前、用餐前后及离园都要消毒，尤其是盥洗室和师生常接触的物品表面，每日至少消毒5次。另外，每周还要全园消毒一次，并清洁中央空调系统。</p>
-<h2>有固定坐位<ahref="https://github.com/reprsb3742/djy/blob/master/gb/tag/%E8%AF%BE%E7%85%A7%E4%B8%AD%E5%BF%83.md#1">课照中心</a> 未施打疫苗须有阴性证明</h2>
-<p>至于有固定座位的<ahref="https://github.com/reprsb3742/djy/blob/master/gb/tag/%E8%AF%BE%E7%85%A7%E4%B8%AD%E5%BF%83.md#1">课照中心</a>（安亲班）、补习班等，开放条件是未施打疫苗或接种完不到14天的人员，须有3天内<ahref="https://github.com/reprsb3742/djy/blob/master/gb/tag/%E5%BF%AB%E7%AD%9B.md#1">快筛</a>或核酸检验阴性证明，且每3~7天定期快；幼儿园、托婴中心、安亲班、补习班内若无窗户，或是无法维持通风的室内空间如地下室，仍不开放。</p>
+<h2>有固定坐位<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%AF%BE%E7%85%A7%E4%B8%AD%E5%BF%83.md#1">课照中心</a> 未施打疫苗须有阴性证明</h2>
+<p>至于有固定座位的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%AF%BE%E7%85%A7%E4%B8%AD%E5%BF%83.md#1">课照中心</a>（安亲班）、补习班等，开放条件是未施打疫苗或接种完不到14天的人员，须有3天内<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BF%AB%E7%AD%9B.md#1">快筛</a>或核酸检验阴性证明，且每3~7天定期快；幼儿园、托婴中心、安亲班、补习班内若无窗户，或是无法维持通风的室内空间如地下室，仍不开放。</p>
 <p>高中以下暑期活动也有所放宽。教育部说，一样是未施打疫苗或接种完不到14天的人员，须有3天内快筛或核酸检验阴性证明，且每3~7天定期快筛；高中以下学校运动团队训练也将开放，但全程要戴口罩，且采固定人员（禁止跨校），人数管制室内20人、室外40人，且不能住宿。相关工作人员如教练、防护员，如未打疫苗或接种完不到14天，一样要有检验证明，每3~7天定期快筛。</p>
 <p>指挥中心指挥官陈时中表示，上述3~7天定期快筛，基本上是7天快筛一次，但有疫调需求等特殊情况，就会要求3天快筛一次，以卫生单位要求为准。</p>
 <p>在社会教育机构方面，教育部表示，人流管控维持单一出入口，馆舍依总活动面积（扣除固定设备）以每2.25平方公尺1人计算来管控人流，并应做好分流及动线规划；入馆采预约制、团体预约参观不得超过50人；图书馆暂停开放团体申请入馆；设有座位、推广及文教活动，采间隔座、梅花座或其他保持至少1.5公尺距离之做法。</p>
@@ -30,46 +30,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/23/n13110133.md#1">因应减碳趋势 立委吁零碳排、碳定价入法</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/23/n13109875.md#1">国旅开放50人出团 业者：市场恢复仍有限</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/22/n13107078.md#1">蓝营吁纾困租屋族 民团倡采“紧急租金补贴”</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13104498.md#1">疫后出游期望 调查：旅客先求有、不求多</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/20/n13101951.md#1">实价登录新功能 专家：增加找案件准确度</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/19/n13099173.md#1">6月电价被多收？台电：下期账单抵缴</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/19/n13098151.md#1">台风烟花是否侵台？气象专家说明预测路径</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/18/n13097154.md#1">EMU3000将抵台 东部干线运量增4成</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/18/n13096995.md#1">本土趋稳仍须留心Delta病毒 医吁两剂疫苗加边境管制</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613961.md#1">台清明连假前2周末 国道单一费率再7折</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/24/n13602137.md#1">台政院提修法 驾驶未礼让行人罚6千</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/24/n13602053.md#1">台抽电子烟惹肺病 最年轻16岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599206.md#1">救蛋荒 陈吉仲宣布鸡蛋生产奖励措施延至3月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13596482.md#1">基隆捷运定案 预计2032年通车</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/20/n13591652.md#1">全台急冻！20县市低温特报 23日前降雨明显</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/18/n13587366.md#1">台薪资调幅难追物价 上班族感受类贫穷</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/15/n13578442.md#1">疫情重击 台外烩团膳营业额 9年最惨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/15/n13578677.md#1">“红盘价”名称废除 台农委会将介入过年鸡蛋收购价</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/15/n13578695.md#1">立委吁废公寓禁养宠物条款 台政部：会研议</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/9/n11101863.md#1" target="_blank">【征文】章阁：中共设风水乱局 破坏北京古城</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/5/n10830342.md#1" target="_blank">走出磨难 费城女医生找到真正的自我</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/28/n2978870.md#1" target="_blank">鲜为人知的马克思之八：魔性的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/19/n3874295.md#1" target="_blank">飞瀑：中共酷刑——灌水</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/7/n13073680.md#1">【命理】年过50无子 命师算出他40岁早得一子</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/12/n13083124.md#1">对于邪灵“附体” 东西方文化如何对待？</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/20/n13102389.md#1">【未解之谜】预言家凯西：我曾是亚特兰蒂斯人</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/15/n13091973.md#1">【未解之谜】 另类转世 亡夫化鸟续前缘</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/6/28/n13054240.md#1">【水浒传奇】神人传武功 奇女琼英梦中学艺</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/22/n13107415.md#1">【微视频】美副卿增访华行 习拜会还差几步？</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/22/n13107712.md#1">【新闻看点】暴雨仍肆虐河南 多少人魂断5分钟</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/22/n13108388.md#1">【秦鹏直播】郑州人造洪水？传京广隧道千车被淹</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/20/n13102731.md#1">暴雨成灾 大陆48小时内第三座水坝溃堤</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13103768.md#1">视频(2)：黄河支流决口 惊天洪水吞没郑州</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13104384.md#1">【一线采访】 郑州路面数百处塌陷 民心恐慌</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13105460.md#1">57岁刘青云近照曝光 粉丝惊呼认不出</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/20/n13102805.md#1">吴奇隆刘诗诗结婚6年 友人爆夫妻俩互动模式</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13105251.md#1">吴尊用三年打造新家 依华人传统庆乔迁之喜</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/20/n13102588.md#1">不舍台湾遭疫情打击 杜汶泽宣布捐待用餐</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/22/n13108051.md#1">河南洪灾魔咒？成龙党庆高唱《怒吼吧黄河》</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/17/n13095397.md#1">中医3步抗老养颜 天天做去皱纹、让皮肤变年轻</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/10/n13080358.md#1">哈佛推荐的10大超级食物 好处不只是抗癌</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13103380.md#1">疫苗混打保护力更强？这组合或比2剂辉瑞效果好</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13103895.md#1">盘点世界各地知名品牌的辣椒酱（一）</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/22/n13106221.md#1">大脚怪抱孩子渡河？ 美国男子拍到奇特画面</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614701.md#1">【新闻看点】惨烈堪比铁链女 陕西有个铁笼女</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/reprsb3742/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/reprsb3742/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/23/n13110389.htm">台警戒降级 教育场域有条件开放</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/23/n13110389.htm">台警戒降级 教育场域有条件开放</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/reprsb3742/djy/blob/master/gb/21/7/23/n13110389.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/reprsb3742/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/reprsb3742/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/reprsb3742/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/reprsb3742/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reprsb3742/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/7/23/n13110389.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
